# sonar

./: .gitignore  Cargo.toml  Containerfile  README.md  build-image.sh  dist.sh
.gitea/workflows/: check.yaml  release.yaml
opensubsonic/: Cargo.toml
opensubsonic-cli/: Cargo.toml
opensubsonic-cli/src/: main.rs
opensubsonic-macro/: Cargo.toml
opensubsonic-macro/src/: attr.rs  lib.rs  response.rs  version.rs
opensubsonic-macro/src/query/: mod.rs
opensubsonic-macro/src/request/: mod.rs
opensubsonic/examples/: filesystem-server.rs
opensubsonic/src/: common.rs  lib.rs  query.rs  response.rs  service.rs  xml.rs
opensubsonic/src/request/: annotation.rs  bookmark.rs  browsing.rs  chat.rs  jukebox.rs  lists.rs  mod.rs  playlists.rs  podcast.rs  radio.rs  retrieval.rs  scan.rs  search.rs  sharing.rs  system.rs  user.rs
opensubsonic/src/snapshots/: opensubsonic__response__test__xml_license.snap  opensubsonic__response__test__xml_music_folder.snap  opensubsonic__response__test__xml_music_folders.snap
sonar/: .env  .envrc  Cargo.toml  build.rs  sonar.proto
sonar-beets/: Cargo.toml
sonar-beets/src/: config.yaml  lib.rs
sonar-cli/: Cargo.toml
sonar-cli/spotify/: resources.json
sonar-cli/src/: main.rs
sonar-experimental/: Cargo.toml
sonar-experimental/src/: main.rs
sonar-extractor-lofty/: Cargo.toml
sonar-extractor-lofty/src/: lib.rs
sonar-grpc/: Cargo.toml  sonar.proto
sonar-grpc/src/: conversions.rs  ext.rs  lib.rs  result_ext.rs
sonar-listenbrainz/: Cargo.toml
sonar-listenbrainz/src/: lib.rs  main.rs
sonar-mpd/: Cargo.toml
sonar-mpd/src/: lib.rs  main.rs
sonar-musicbrainz/: Cargo.toml
sonar-musicbrainz/src/: lib.rs  rate_limiter.rs
sonar-musicbrainz/src/snapshots/: sonar_musicbrainz__test__expand.snap
sonar-opensubsonic/: Cargo.toml
sonar-opensubsonic/src/: lib.rs
sonar-player/: Cargo.toml
sonar-player/src/: audio_bytes.rs  audio_client_grpc.rs  audio_file.rs  audio_player.rs  audio_stream.rs  lib.rs  main.rs
sonar-spotify/: Cargo.toml
sonar-spotify/src/: convert.rs  external.rs  lib.rs  metadata.rs
sonar-web/: bun.lockb  gen-proto.sh  package.json
sonar-web/src/lib/: urls.ts  util.ts
sonar-web/src/lib/component/: NavBar.svelte
sonar-web/src/lib/server/: index.ts
sonar-web/src/lib/server/pb/: sonar.ts
sonar-web/src/lib/server/pb/google/protobuf/: field_mask.ts
sonar-web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
sonar-web/src/routes/album/[albumId]/: +page.server.ts  +page.svelte
sonar-web/src/routes/artist/: +page.server.ts  +page.svelte
sonar-web/src/routes/artist/[artistId]/: +page.server.ts  +page.svelte
sonar-web/src/routes/image/[imageId]/: +server.ts
sonar/migrations/: 20240127062318_init.sql
sonar/src/: album.rs  artist.rs  audio.rs  blob.rs  bytestream.rs  context.rs  db.rs  download.rs  error.rs  ext.rs  external.rs  favorite.rs  gc.rs  genre.rs  id.rs  image.rs  importer.rs  ks.rs  lib.rs  metadata.rs  pin.rs  playlist.rs  prop.rs  property.rs  scrobble.rs  scrobbler.rs  search.rs  subscription.rs  track.rs  user.rs
sonar/src/blob/: filesystem.rs  memory.rs
sonar/src/context/: memory_indexes.rs  mod.rs  playlist_cover_process.rs  scrobbler_process.rs  subscription_process.rs
sonar/src/grpc/: mod.rs
sonar/src/migrations/: 000_init.sql  001_favorite.sql  002_genre_index_namespace_genre.sql  003_rework_subscription.sql  004_playlist_cover_art.sql  mod.rs
sonar/src/property/: mod.rs  property_key.rs  property_update.rs  property_value.rs
sonar/src/search/: builtin.rs  meilisearch.rs
sonar/src/test/: mod.rs
sonar/src/types/: byte_range.rs  external_subscription.rs  list_params.rs  mod.rs  timestamp.rs  value_update.rs
sonar/src/user/: mod.rs  token.rs  username.rs
sonar/tests/: album.rs  artist.rs  audio.rs  common.rs  external.rs  favorite.rs  image.rs  import.rs  playlist.rs  search.rs  track.rs  user.rs
src/: common.rs  lib.rs  main.rs  response.rs  service.rs
src/request/: annotation.rs  bookmark.rs  browsing.rs  chat.rs  jukebox.rs  lists.rs  mod.rs  playlists.rs  podcast.rs  radio.rs  retrieval.rs  scan.rs  search.rs  sharing.rs  system.rs  user.rs
