[workspace]
resolver = "2"
members = [
	"opensubsonic",
	"opensubsonic-cli",
	"opensubsonic-macro",
	"sonar",
	"sonar-beets",
	"sonar-cli",
	# "sonar-experimental",
	"sonar-extractor-lofty",
	"sonar-grpc",
	"sonar-listenbrainz", "sonar-musicbrainz",
	# "sonar-mpd",
	"sonar-opensubsonic",
	# "sonar-player",
	"sonar-spotify"
]

[profile.release]
strip = true
opt-level = "z"

[profile.dev.build-override]
opt-level = 3

[profile.dev]
strip = true
