[package]
name = "opensubsonic-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "opensubsonic"

[dependencies]
opensubsonic = { path = "../opensubsonic", features = ["clap"] }

clap = { version = "4.5.4", features = ["env", "derive"] }
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
