[package]
name = "opensubsonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensubsonic-macro = { path = "../opensubsonic-macro" }

async-trait = "0.1.74"
percent-encoding = "2.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["serde", "macros", "parsing", "formatting", "rand"] }
tracing = "0.1.40"
tokio-stream = { version = "0.1.14", features = ["full"] }
bytes = { version = "1.5.0", features = ["serde"] }
tower = "0.4.13"
tower-service = "0.3.2"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"

clap = { version = "4.4.18", features = ["env", "derive"], optional = true }

[dev-dependencies]
axum = "0.7.2"
anyhow = "1.0.79"
lofty = "0.18.2"
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
clap = ["dep:clap"]
