[package]
name = "opensubsonic"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensubsonic-macro = { path = "../opensubsonic-macro" }

async-trait = "0.1.80"
percent-encoding = "2.3.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["serde", "macros", "parsing", "formatting", "rand"] }
tracing = "0.1.40"
tokio-stream = { version = "0.1.15", features = ["full"] }
bytes = { version = "1.6.0", features = ["serde"] }
tower = "0.4.13"
tower-service = "0.3.2"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.1"

clap = { version = "4.5.4", features = ["env", "derive"], optional = true }
insta = "1.38.0"

[dev-dependencies]
axum = "0.7.5"
anyhow = "1.0.82"
lofty = "0.18.2"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
clap = ["dep:clap"]
