[package]
name = "sonar-beets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sonar = { path = "../sonar" }
tempfile = "3.9.0"

tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
