[package]
name = "sonar-beets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofty = "0.18.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sonar = { path = "../sonar" }
tempfile = "3.10.1"

tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
