[package]
name = "sonar-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sonar"
path = "src/main.rs"

[dependencies]
sonar = { path = "../sonar" }
sonar-grpc = { path = "../sonar-grpc" }
sonar-opensubsonic = { path = "../sonar-opensubsonic" }
sonar-extractor-lofty = { path = "../sonar-extractor-lofty" }
sonar-beets = { path = "../sonar-beets" }
sonar-listenbrainz = { path = "../sonar-listenbrainz" }
sonar-spotify = { path = "../sonar-spotify" }

clap = { version = "4.4.18", features = ["env", "derive"] }
color-eyre = "0.6.2"
eyre = "0.6.11"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
bytes = "1.5.0"
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = "0.1.14"
tracing-opentelemetry = "0.22.0"
opentelemetry-jaeger = "0.20.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
prost-types = "0.12.3"
