[package]
name = "sonar-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonar = { path = "../sonar" }
sonar-spotify = { path = "../sonar-spotify" }

prost = "0.12.4"
prost-types = "0.12.4"
tonic = "0.11.0"
eyre = "0.6.12"
tracing = "0.1.40"
bytes = "1.6.0"
tokio-stream = "0.1.15"

[build-dependencies]
tonic-build = "0.11.0"
