[package]
name = "sonar-listenbrainz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonar = { path = "../sonar" }

reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["time"] }
tracing-subscriber = "0.3.18"
