[package]
name = "sonar-opensubsonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonar = { path = "../sonar" }

opensubsonic = { path = "../opensubsonic" }
tracing = "0.1.40"
axum = "0.7.4"
eyre = "0.6.11"
tokio = { version = "1.35.1", features = ["net"] }
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
