[package]
name = "sonar-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonar = { path = "../sonar" }
sonar-grpc = { path = "../sonar-grpc" }

cpal = { version = "0.15.2", features = ["jack"] }
symphonia = { version = "0.5.4", features = ["all"] }
async-trait = "0.1.77"
bytes = "1.5.0"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
tracing = "0.1.40"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
