[package]
name = "sonar-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
reqwest = "0.11.24"
rspotify = "0.12.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sonar = { path = "../sonar" }
spotdl = { git = "https://git.d464.sh/code/spotdl" }
tempfile = "3.9.0"
tokio = { version = "1.36.0", features = ["fs", "time"] }
tokio-stream = "0.1.14"

tracing = "0.1.40"
