[package]
name = "sonar-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
reqwest = "0.12.4"
rspotify = "0.13.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sonar = { path = "../sonar" }
spotdl = { git = "https://git.d464.sh/code/spotdl" }
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["fs", "time"] }
tokio-stream = "0.1.15"

tracing = "0.1.40"
