[package]
name = "sonar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-utilities = ["dep:rand"]

[dependencies]
async-trait = "0.1.77"
bytes = "1.5.0"
chrono = "0.4.33"
scrypt = "0.11.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
ulid = "1.1.0"

rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
infer = "0.15.0"
lofty = "0.18.2"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sonar = { path = "." , features = ["test-utilities"] }
