[package]
name = "sonar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-utilities = []

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
chrono = "0.4.38"
scrypt = "0.11.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
ulid = "1.1.2"

rand = { version = "0.8.5" }
serde = { version = "1.0.198", features = ["derive"] }
bincode = "1.3.3"
infer = "0.15.0"
lofty = "0.19.0"
sha2 = "0.10.8"
hex = "0.4.3"
meilisearch-sdk = "0.25.0"
image = "0.25.1"

[dev-dependencies]
sonar = { path = "." , features = ["test-utilities"] }
